# asyncpp-io

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: compiler-support.yml  lint.yml  macos-grep-headers.yml
cmake/: import_asyncpp.cmake  import_gtest.cmake  import_openssl.cmake
compiler/macos-12_gcc-12/: shields.json
compiler/macos-12_gcc-14/: shields.json
compiler/macos-13_gcc-12/: shields.json
compiler/macos-13_gcc-14/: shields.json
compiler/macos-14_clang-15/: shields.json
compiler/macos-14_gcc-12/: shields.json
compiler/macos-14_gcc-14/: shields.json
compiler/ubuntu-2204_clang-15/: shields.json
include/asyncpp/io/: address.h  buffer.h  dns.h  endpoint.h  file.h  io_service.h  network.h  socket.h  tls.h
include/asyncpp/io/detail/: cancel_awaitable.h  io_engine.h
include/asyncpp/io/dns/: enums.h  qname.h  reader.h  record.h  writer.h
src/: address.cpp  block_allocator.h  dns.cpp  file.cpp  io_engine.cpp  io_engine_generic_unix.cpp  io_engine_generic_unix.h  io_engine_iocp.cpp  io_engine_select.cpp  io_engine_uring.cpp  io_engine_win32cq.cpp  io_service.cpp  socket.cpp  tls.cpp
src/dns/: enums.cpp  record.cpp  tsig.cpp
test/: address.cpp  dns.cpp  dns_new.cpp  endpoint.cpp  file.cpp  network.cpp  socket.cpp  tls.cpp
